--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <td>2025.1 - Turma especial</td>
           <td>Matemática 1</td>
           <td>Práticas para o ensino da Matemática I nos anos iniciais do EF</td>
-          <td>Dr. Guilherme Jacobick</td>
+          <td>Dr. Guilherme Jacobik</td>
           <td><a href="https://forms.office.com/r/Rb4bUc2DNz" target="_blank">Formulário</a></td>
         </tr>
         <tr>
