--- a/siteestagio.html
+++ b/siteestagio.html
@@ -54,6 +54,26 @@
         a:hover {
             text-decoration: underline;
         }
+
+        .revisao-container {
+            margin-top: 40px;
+            background-color: #ffeaa7;
+            border-left: 6px solid #e17055;
+            padding: 20px;
+            border-radius: 10px;
+            font-size: 1.1em;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        .revisao-container h2 {
+            margin-top: 0;
+            color: #d63031;
+        }
+
+        .revisao-container a {
+            color: #2d3436;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
@@ -237,7 +257,13 @@
         </table>
     </div>
 
+    <div class="revisao-container">
+        <h2>📌 Revisão de Notas</h2>
+        <p><strong>Alunos:</strong> Caso desejem solicitar revisão de notas, preencham o formulário abaixo:</p>
+        <p><a href="https://forms.office.com/r/zBXFNEtp6w" target="_blank">Formulário de Revisão para Alunos</a></p>
+        <p><strong>Secretaria e Professores:</strong> Utilizem o formulário interno a seguir para tratar de revisões:</p>
+        <p><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UMEtUQU9OSjlPQVJLWDI3U0FIUlQ2WDZZUS4u&Token=39d6dbba9068487aa99f2ab405aada7d" target="_blank">Formulário Interno para Secretaria e Professores</a></p>
+    </div>
+
 </body>
 </html>
-
-
