--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <tr>
           <td>2025.1 - Turma especial</td>
           <td>Matemática 1</td>
-          <td>Didáticas para o ensino da Matemática II </td>
+          <td>Didáticas para o ensino da Matemática I </td>
           <td>Dr. Guilherme Jacobik</td>
           <td><a href="https://forms.office.com/r/Rb4bUc2DNz" target="_blank">Formulário</a></td>
         </tr>
