--- a/siteestagio.html
+++ b/siteestagio.html
@@ -240,7 +240,7 @@
                 <tr>
                     <td>2025.1 - Turma especial</td>
                     <td>Matemática 1</td>
-                    <td>Didáticas para o ensino da Matemática II</td>
+                    <td>Didáticas para o ensino da Matemática I</td>
                     <td>Dr. Guilherme Jacobik</td>
                     <td><a href="https://forms.office.com/r/Rb4bUc2DNz" target="_blank">Formulário</a></td>
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UNTBROVZTWjRSS1hGNlpESkc4N1VWMVFPMC4u&Token=cf416fdabff6452282d57e542f627c96" target="_blank">Acesso Interno</a></td>
