--- a/index.html
+++ b/index.html
@@ -79,146 +79,70 @@
       </thead>
       <tbody>
 
-        <tr>
-          <td>2025.1 - matutino</td>
-          <td>Construção Olhar- Matutino</td>
-          <td>A Construção do olhar</td>
-          <td>Dra. Fernanda Arantes</td>
-          <td><a href="https://forms.office.com/r/hR2QL6fzQR" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - noturno</td>
-          <td>Construção do Olhar</td>
-          <td>A Construção do olhar</td>
-          <td>Ma. Ivaneide Dantas da Silva</td>
-          <td><a href="https://forms.office.com/r/kAp0WLtwNG" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - matutino</td>
-          <td>Práticas Educacionais Matutino</td>
-          <td>Práticas Educacionais nos Anos Iniciais do Ensino Fundamental</td>
-          <td>Ma. Edna Oliveira</td>
-          <td><a href="https://forms.office.com/r/9gB8rjxk0Z" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - noturno</td>
-          <td>Práticas Educacionais Noturno</td>
-          <td>Práticas Educacionais nos Anos Iniciais do Ensino Fundamental</td>
-          <td>Ma. Edna Oliveira</td>
-          <td><a href="https://forms.office.com/r/LhWwpts9FS" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - matutino</td>
-          <td>EJA Matutino</td>
-          <td>Educação de Jovens e Adultos</td>
-          <td>Ma. Sheila Coelho</td>
-          <td><a href="https://forms.office.com/r/xXuNxFVGL7" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - noturno</td>
-          <td>EJA Noturno</td>
-          <td>Educação de Jovens e Adultos</td>
-          <td>Ma. Sheila Coelho</td>
-          <td><a href="https://forms.office.com/r/hEUVM9Tr9x" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - matutino</td>
-          <td>Alfabetização Matutino</td>
-          <td>Práticas para a Alfabetizaçao</td>
-          <td>Ma. Cristiane Mori</td>
-          <td><a href="https://forms.office.com/r/Dz22TkdyGA" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - noturno</td>
-          <td>Alfabetização Noturno</td>
-          <td>Práticas para a Alfabetizaçao</td>
-          <td>Ma. Cristiane Mori</td>
-          <td><a href="https://forms.office.com/r/T5b7rmykjh" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - matutino</td>
-          <td>PP Matutino</td>
-          <td>Políticas Públicas para a Educação</td>
-          <td>Ma. Sheila Coelho</td>
-          <td><a href="https://forms.office.com/r/jLcmDf1DEC" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - noturno</td>
-          <td>PP Noturno</td>
-          <td>Políticas Públicas para a Educação</td>
-          <td>Ma. Sheila Coelho</td>
-          <td><a href="https://forms.office.com/r/u4kSgu7hSG" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - matutino</td>
-          <td>Inclusão Matutino</td>
-          <td>Educação Inclusiva</td>
-          <td>Dra. Fernanda Arantes</td>
-          <td><a href="https://forms.office.com/r/itew41zv1Y" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - noturno</td>
-          <td>Inclusão Noturno</td>
-          <td>Educação Inclusiva</td>
-          <td>Dra. Fernanda Arantes</td>
-          <td><a href="https://forms.office.com/r/1S0iXtUJw8" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - matutino</td>
-          <td>Paradigmas Matutino</td>
-          <td>Perspectivas e Paradigmas atuais para formação integral do educador</td>
-          <td>Dra. Elizabeth Sanda</td>
-          <td><a href="https://forms.office.com/r/H5jZ7ZzbE1" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - noturno</td>
-          <td>Paradigmas Noturno</td>
-          <td>Perspectivas e Paradigmas atuais para formação integral do educador</td>
-          <td>Dra. Elizabeth Sanada</td>
-          <td><a href="https://forms.office.com/r/fgZ7akPJvC" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - matutino</td>
-          <td>Oficio de Professor MATUTINO</td>
-          <td>Oficio de Professor e Desenvolvimento Profissional - TCC III</td>
-          <td>Dra. Angela Di Paolo</td>
-          <td><a href="https://forms.office.com/r/3btWeYwzWn" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - noturno</td>
-          <td>Oficio de Professor NOTURNO</td>
-          <td>Oficio de Professor e Desenvolvimento Profissional - TCC III</td>
-          <td>Dra. Angela Di Paolo</td>
-          <td><a href="https://forms.office.com/r/fNzKKeNmMS" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - Turma especial</td>
-          <td>Práticas Educacionais</td>
-          <td>Práticas Educacionais da Primeira Infância de 0 a 3</td>
-          <td>Dra. Angela Di Paolo</td>
-          <td><a href="https://forms.office.com/r/A3pPXgspAF" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - Turma especial</td>
-          <td>Função Diretor - Turma Especial</td>
-          <td>Função do Diretor</td>
-          <td>Dra. Tathyana Gouvea</td>
-          <td><a href="https://forms.office.com/r/eguBqN0tVC" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - Turma especial</td>
-          <td>Matemática 1</td>
-          <td>Didáticas para o ensino da Matemática I </td>
-          <td>Dr. Guilherme Jacobik</td>
-          <td><a href="https://forms.office.com/r/Rb4bUc2DNz" target="_blank">Formulário</a></td>
-        </tr>
-        <tr>
-          <td>2025.1 - Turma especial</td>
-          <td>Matemática 1</td>
-          <td>Práticas para o ensino da Matemática I nos anos iniciais do EF</td>
-          <td>Dra. Sonia Vidigal</td>
-          <td><a href="https://forms.office.com/r/jnrKucC7ge" target="_blank">Formulário</a></td>
-        </tr>
+<tr>
+    <td>2025.2 - matutino</td>
+    <td>Práticas Educacionais na 1ª Infância: bebês e crianças até 03 anos </td>
+    <td>Práticas Educacionais na 1ª Infância</td>
+    <td>Profa. Dra. Waldete Tristão</td>
+    <td><a href="https://forms.office.com/r/XUf8DtcSTh" target="_blank">Formulário</a></td>
+</tr>
+<tr>
+    <td>2025.2 - Matutino</td>
+    <td>Práticas para o Ensino da Língua Portuguesa nos Anos Iniciais do Ensino Fundamental </td>
+    <td>Práticas para o Ensino da Língua Portuguesa</td>
+    <td> Profa. Ma. Cris Mori</td>
+    <td><a href="https://forms.office.com/r/8VNVpHzgzq" target="_blank">Formulário</a></td>
+</tr>
+<tr>
+    <td>2025.2 - matutino</td>
+    <td>Perspectivas e Paradigmas atuais para a formação integral do educador </td>
+    <td>Perspectivas e Paradigmas atuais para a formação integral do educador </td>
+    <td> Profa. Dra. Elizabeth Sanada Gurgueira</td>
+    <td><a href="https://forms.office.com/r/LSJdRP7u1h" target="_blank">Formulário</a></td>
+</tr>
+<tr>
+    <td>2025.2 - noturno</td>
+    <td>Práticas Educacionais Noturno</td>
+    <td>Práticas Educacionais nos Anos Iniciais do Ensino Fundamental</td>
+    <td>Ma. Edna Oliveira</td>
+    <td><a href="https://forms.office.com/r/LhWwpts9FS" target="_blank">Formulário</a></td>
+</tr>
+<tr>
+    <td>2025.2 - matutino</td>
+    <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
+    <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
+    <td> Profa.Dra. Alcione Piva e Profa. Ma. Edna Oliveira</td>
+    <td><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UMlNGMzRTUjRYNzk0NzlRTUxHRDFDQ1NFSy4u" target="_blank">Formulário</a></td>
+</tr>
+<tr>
+    <td>2025.2 - noturno</td>
+    <td>Práticas Educacionais na 1ª Infância: bebês e crianças até 03 anos </td>
+    <td>Práticas Educacionais na 1ª Infância: bebês e crianças até 03 anos </td>
+    <td>Profa. Ma. Viviane Anselmo</td>
+    <td><a href="https://forms.office.com/r/cdtwp1PXyk" target="_blank">Formulário</a></td>
+</tr>
+<tr>
+    <td>2025.2 - noturno</td>
+    <td>Práticas para o Ensino da Língua Portuguesa nos Anos Iniciais do Ensino Fundamental </td>
+    <td>Práticas para o Ensino da Língua Portuguesa nos Anos Iniciais do Ensino Fundamental </td>
+    <td>Ma. Cristiane Mori</td>
+    <td><a href="https://forms.office.com/r/PHnd9n9WvC" target="_blank">Formulário</a></td>
+</tr>
+<tr>
+    <td>2025.2 - noturno</td>
+    <td>Perspectivas e Paradigmas atuais para a formação integral do educador </td>
+    <td>Perspectivas e Paradigmas atuais para a formação integral do educador </td>
+    <td> Profa. Dra. Elizabeth Sanada Gurgueira</td>
+    <td><a href="https://forms.office.com/r/WznAtFxKVY" target="_blank">Formulário</a></td>
+</tr>
+<tr>
+    <td>2025.2 - noturno</td>
+    <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
+    <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
+    <td> Profa.Dra. Alcione Piva </td>
+    <td><a href="https://forms.office.com/r/NVLtp08LRf" target="_blank">Formulário</a></td>
+</tr>
+
       </tbody>
     </table>
   </div>
@@ -250,4 +174,5 @@
 
 </body>
 </html>
+
 
