--- a/siteestagio.html
+++ b/siteestagio.html
@@ -94,7 +94,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>2025.2 - matutino</td>
+                    <td>2025.2 - Matutino</td>
                     <td>Práticas Educacionais na 1ª Infância: bebês e crianças até 03 anos </td>
                     <td>Práticas Educacionais na 1ª Infância</td>
                     <td>Profa. Dra. Waldete Tristão</td>
@@ -110,7 +110,7 @@
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UMVk0R0JMMkM4M0E3TUpTODk1Mk5MVDlVNi4u&Token=7c9711f94a5540e2a0d3a122dbfd689e" target="_blank">Acesso Interno</a></td>
                 </tr>
                 <tr>
-                    <td>2025.2 - matutino</td>
+                    <td>2025.2 - Matutino</td>
                     <td>Perspectivas e Paradigmas atuais para a formação integral do educador </td>
                     <td>Perspectivas e Paradigmas atuais para a formação integral do educador </td>
                     <td> Profa. Dra. Elizabeth Sanada Gurgueira</td>
@@ -118,7 +118,7 @@
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UOVkwVUNJTUhCWldVSTFHN0xSUEo5WUdWOS4u&Token=804fcde11796489e9022cf7952d4454f" target="_blank">Acesso Interno</a></td>
                 </tr>
                 <tr>
-                    <td>2025.2 - noturno</td>
+                    <td>2025.2 - Matutino</td>
                     <td>Práticas Educacionais Noturno</td>
                     <td>Práticas Educacionais nos Anos Iniciais do Ensino Fundamental</td>
                     <td>Ma. Edna Oliveira</td>
@@ -126,7 +126,7 @@
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5URDA5Tk9FVFE2SVQyVE5QVDZUT1kxNFhSMC4u&Token=996ae21a69bd4c85a1e947d548c8d243" target="_blank">Acesso Interno</a></td>
                 </tr>
                 <tr>
-                    <td>2025.2 - matutino</td>
+                    <td>2025.2 - Matutino</td>
                     <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
                     <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
                     <td> Profa.Dra. Alcione Piva e Profa. Ma. Edna Oliveira</td>
@@ -134,7 +134,7 @@
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UMlNGMzRTUjRYNzk0NzlRTUxHRDFDQ1NFSy4u&Token=82c8a72e8ca64ffc853bd83f0cac9b97" target="_blank">Acesso Interno</a></td>
                 </tr>
                 <tr>
-                    <td>2025.2 - noturno</td>
+                    <td>2025.2 - Noturno</td>
                     <td>Práticas Educacionais na 1ª Infância: bebês e crianças até 03 anos </td>
                     <td>Práticas Educacionais na 1ª Infância: bebês e crianças até 03 anos </td>
                     <td>Profa. Ma. Viviane Anselmo</td>
@@ -142,7 +142,7 @@
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5URE9PNlJPVFNNT0RRS0g4NzlIR0NNRUQxRS4u&Token=99723c69130e426fa013dd54958e13f0" target="_blank">Acesso Interno</a></td>
                 </tr>
                                 <tr>
-                    <td>2025.2 - noturno</td>
+                    <td>2025.2 - Noturno</td>
                     <td>Práticas para o Ensino da Língua Portuguesa nos Anos Iniciais do Ensino Fundamental </td>
                     <td>Práticas para o Ensino da Língua Portuguesa nos Anos Iniciais do Ensino Fundamental </td>
                     <td>Ma. Cristiane Mori</td>
@@ -150,7 +150,7 @@
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UMFU2N0c3Tlo5UktSQ0VWSTRXRVlSNTVHWi4u&Token=34c94e00fcd1490789fa3714215510ef" target="_blank">Acesso Interno</a></td>
                 </tr>
                 <tr>
-                    <td>2025.2 - noturno</td>
+                    <td>2025.2 - Noturno</td>
                     <td>Perspectivas e Paradigmas atuais para a formação integral do educador </td>
                     <td>Perspectivas e Paradigmas atuais para a formação integral do educador </td>
                     <td> Profa. Dra. Elizabeth Sanada Gurgueira</td>
@@ -158,7 +158,7 @@
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5URTIySFYyUDdSM0RFTkkwUDVUMUZESEVMVy4u&Token=58211033e77a494c9e82b39359f8ada6" target="_blank">Acesso Interno</a></td>
                 </tr>
                 <tr>
-                    <td>2025.2 - noturno</td>
+                    <td>2025.2 - Noturno</td>
                     <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
                     <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
                     <td> Profa.Dra. Alcione Piva </td>
@@ -182,5 +182,6 @@
 
 </body>
 </html>
+
 
 
