--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <tbody>
 
 <tr>
-    <td>2025.2 - matutino</td>
+    <td>2025.2 - Matutino</td>
     <td>Práticas Educacionais na 1ª Infância: bebês e crianças até 03 anos </td>
     <td>Práticas Educacionais na 1ª Infância</td>
     <td>Profa. Dra. Waldete Tristão</td>
@@ -94,49 +94,49 @@
     <td><a href="https://forms.office.com/r/8VNVpHzgzq" target="_blank">Formulário</a></td>
 </tr>
 <tr>
-    <td>2025.2 - matutino</td>
+    <td>2025.2 - Matutino</td>
     <td>Perspectivas e Paradigmas atuais para a formação integral do educador </td>
     <td>Perspectivas e Paradigmas atuais para a formação integral do educador </td>
     <td> Profa. Dra. Elizabeth Sanada Gurgueira</td>
     <td><a href="https://forms.office.com/r/LSJdRP7u1h" target="_blank">Formulário</a></td>
 </tr>
 <tr>
-    <td>2025.2 - noturno</td>
+    <td>2025.2 - Matutino</td>
     <td>Práticas Educacionais Noturno</td>
     <td>Práticas Educacionais nos Anos Iniciais do Ensino Fundamental</td>
     <td>Ma. Edna Oliveira</td>
     <td><a href="https://forms.office.com/r/LhWwpts9FS" target="_blank">Formulário</a></td>
 </tr>
 <tr>
-    <td>2025.2 - matutino</td>
+    <td>2025.2 - Matutino</td>
     <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
     <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
     <td> Profa.Dra. Alcione Piva e Profa. Ma. Edna Oliveira</td>
     <td><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UMlNGMzRTUjRYNzk0NzlRTUxHRDFDQ1NFSy4u" target="_blank">Formulário</a></td>
 </tr>
 <tr>
-    <td>2025.2 - noturno</td>
+    <td>2025.2 - Noturno</td>
     <td>Práticas Educacionais na 1ª Infância: bebês e crianças até 03 anos </td>
     <td>Práticas Educacionais na 1ª Infância: bebês e crianças até 03 anos </td>
     <td>Profa. Ma. Viviane Anselmo</td>
     <td><a href="https://forms.office.com/r/cdtwp1PXyk" target="_blank">Formulário</a></td>
 </tr>
 <tr>
-    <td>2025.2 - noturno</td>
+    <td>2025.2 - Noturno</td>
     <td>Práticas para o Ensino da Língua Portuguesa nos Anos Iniciais do Ensino Fundamental </td>
     <td>Práticas para o Ensino da Língua Portuguesa nos Anos Iniciais do Ensino Fundamental </td>
     <td>Ma. Cristiane Mori</td>
     <td><a href="https://forms.office.com/r/PHnd9n9WvC" target="_blank">Formulário</a></td>
 </tr>
 <tr>
-    <td>2025.2 - noturno</td>
+    <td>2025.2 - Noturno</td>
     <td>Perspectivas e Paradigmas atuais para a formação integral do educador </td>
     <td>Perspectivas e Paradigmas atuais para a formação integral do educador </td>
     <td> Profa. Dra. Elizabeth Sanada Gurgueira</td>
     <td><a href="https://forms.office.com/r/WznAtFxKVY" target="_blank">Formulário</a></td>
 </tr>
 <tr>
-    <td>2025.2 - noturno</td>
+    <td>2025.2 - Noturno</td>
     <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
     <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
     <td> Profa.Dra. Alcione Piva </td>
@@ -174,5 +174,6 @@
 
 </body>
 </html>
+
 
 
