--- a/siteestagio.html
+++ b/siteestagio.html
@@ -119,8 +119,8 @@
                 </tr>
                 <tr>
                     <td>2025.2 - Matutino</td>
-                    <td>Práticas Educacionais Noturno</td>
-                    <td>Práticas Educacionais nos Anos Iniciais do Ensino Fundamental</td>
+                    <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
+                    <td>Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
                     <td> Profa.Dra. Alcione Piva e Profa. Ma. Edna Oliveira</td>
                     <td><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UMlNGMzRTUjRYNzk0NzlRTUxHRDFDQ1NFSy4u" target="_blank">Formulário</a></td>
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UMlNGMzRTUjRYNzk0NzlRTUxHRDFDQ1NFSy4u&Token=82c8a72e8ca64ffc853bd83f0cac9b97" target="_blank">Acesso Interno</a></td>
@@ -175,6 +175,7 @@
 
 </body>
 </html>
+
 
 
 
