--- a/index.html
+++ b/index.html
@@ -100,8 +100,35 @@
     <td> Profa. Dra. Elizabeth Sanada Gurgueira</td>
     <td><a href="https://forms.office.com/r/LSJdRP7u1h" target="_blank">Formulário</a></td>
 </tr>
-
-
+ 
+<tr>
+    <td>2025.2 - Matutino</td>
+    <td> Matriz 2017 (11081 - Coordenação Pedagógica)- Matutino </td>
+    <td> Matriz 2017 (11081 - Coordenação Pedagógica)- Matutino </td>
+    <td> Profa. Sofia </td>
+    <td><a href="https://forms.office.com/r/jMAZjVEPAn" target="_blank">Formulário</a></td>
+</tr>
+<tr>
+    <td>2025.2 - Matutino</td>
+    <td> Função do Diretor e Métodos de Gestão Institucional - 25 horas de estágio </td>
+    <td> Função do Diretor e Métodos de Gestão Institucional - 25 horas de estágio </td>
+    <td> Profa. Sofia </td>
+    <td><a href="https://forms.office.com/r/GrzqySTw6U" target="_blank">Formulário</a></td>
+</tr>
+<tr>
+    <td>2025.2 - Matutino</td>
+    <td> Práticas Educacionais na 1ª. Infância com crianças de 4 e 5 anos </td>
+    <td> Práticas Educacionais na 1ª. Infância com crianças de 4 e 5 anos </td>
+    <td> Profa. Elizabeth Sanada </td>
+    <td><a href="https://forms.office.com/r/dCt3zVsL5z" target="_blank">Formulário</a></td>
+</tr>
+<tr>
+    <td>2025.2 - Noturno</td>
+    <td> Matriz 2017 (11081 - Coordenação Pedagógica)- Matutino </td>
+    <td> Matriz 2017 (11081 - Coordenação Pedagógica)- Matutino </td>
+    <td> Profa. Waldete </td>
+    <td><a href="https://forms.office.com/r/jMAZjVEPAn" target="_blank">Formulário</a></td>
+</tr>
 <tr>
     <td>2025.2 - Noturno</td>
     <td>Práticas Educacionais na 1ª Infância: bebês e crianças até 03 anos </td>
@@ -162,6 +189,7 @@
 
 </body>
 </html>
+
 
 
 
