--- a/siteestagio.html
+++ b/siteestagio.html
@@ -125,7 +125,40 @@
                     <td><a href="https://forms.office.com/Pages/ResponsePage.aspx?id=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UMlNGMzRTUjRYNzk0NzlRTUxHRDFDQ1NFSy4u" target="_blank">Formulário</a></td>
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UMlNGMzRTUjRYNzk0NzlRTUxHRDFDQ1NFSy4u&Token=82c8a72e8ca64ffc853bd83f0cac9b97" target="_blank">Acesso Interno</a></td>
                 </tr>
-
+<tr>
+    <td>2025.2 - Matutino</td>
+    <td> Matriz 2017 (11081 - Coordenação Pedagógica)- Matutino </td>
+    <td> Matriz 2017 (11081 - Coordenação Pedagógica)- Matutino </td>
+    <td> Profa. Sofia </td>
+    <td><a href="https://forms.office.com/r/jMAZjVEPAn" target="_blank">Formulário</a></td>
+    <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UODRTTEJEQUhNUlRZRzNTV0g5Q1E4ODdYNy4u&Token=cdf12430aa21456485c88c4c0a9ce8c8" target="_blank">Acesso Interno</a></td>
+</tr>
+<tr>
+    <td>2025.2 - Matutino</td>
+    <td> Função do Diretor e Métodos de Gestão Institucional - 25 horas de estágio </td>
+    <td> Função do Diretor e Métodos de Gestão Institucional - 25 horas de estágio </td>
+    <td> Profa. Sofia </td>
+    <td><a href="https://forms.office.com/r/GrzqySTw6U" target="_blank">Formulário</a></td>
+    <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UQkw1U0tWQlhJTTdMMlVHOE9CTTJRUDc4OC4u&Token=872ee5a6c2ae4808a3c3726865b02ae0" target="_blank">Acesso Interno</a></td>
+    
+</tr>
+<tr>
+    <td>2025.2 - Matutino</td>
+    <td> Práticas Educacionais na 1ª. Infância com crianças de 4 e 5 anos </td>
+    <td> Práticas Educacionais na 1ª. Infância com crianças de 4 e 5 anos </td>
+    <td> Profa. Elizabeth Sanada </td>
+    <td><a href="https://forms.office.com/r/dCt3zVsL5z" target="_blank">Formulário</a></td>
+    <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UQjVTSFdHMlJSODdVQ1I0R0xROERTTzUwMi4u&Token=5d007191bf354ab9ad51cd1be965e6b9" target="_blank">Acesso Interno</a></td>
+    
+</tr>
+<tr>
+    <td>2025.2 - Noturno</td>
+    <td> Matriz 2017 (11081 - Coordenação Pedagógica)- Matutino </td>
+    <td> Matriz 2017 (11081 - Coordenação Pedagógica)- Matutino </td>
+    <td> Profa. Waldete </td>
+    <td><a href="https://forms.office.com/r/jMAZjVEPAn" target="_blank">Formulário</a></td>
+    <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UQThXN0YwSDZaVkxFWU5KTVZWRUdFVUVYMi4u&Token=92248a460241485b999cd37066a536a6" target="_blank">Acesso Interno</a></td>
+</tr>
                 <tr>
                     <td>2025.2 - Noturno</td>
                     <td>Práticas Educacionais na 1ª Infância: bebês e crianças até 03 anos </td>
@@ -175,6 +208,7 @@
 
 </body>
 </html>
+
 
 
 
