--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 </tr>
 <tr>
     <td>2025.2 - Noturno</td>
-    <td> Matriz 2017 (11081 - Coordenação Pedagógica)- Matutino </td>
-    <td> Matriz 2017 (11081 - Coordenação Pedagógica)- Matutino </td>
+    <td> Matriz 2017 (11081 - Coordenação Pedagógica)-  </td>
+    <td> Matriz 2017 (11081 - Coordenação Pedagógica)-  </td>
     <td> Profa. Waldete </td>
     <td><a href="https://forms.office.com/r/jMAZjVEPAn" target="_blank">Formulário</a></td>
 </tr>
@@ -189,6 +189,7 @@
 
 </body>
 </html>
+
 
 
 
