--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
  
 <tr>
     <td>2025.2 - Matutino</td>
-    <td> Matriz 2017 (11081 - Coordenação Pedagógica)- Matutino </td>
-    <td> Matriz 2017 (11081 - Coordenação Pedagógica)- Matutino </td>
+    <td> Matriz 2017 (11081 - Coordenação Pedagógica)-  </td>
+    <td> Matriz 2017 (11081 - Coordenação Pedagógica)-  </td>
     <td> Profa. Sofia </td>
     <td><a href="https://forms.office.com/r/jMAZjVEPAn" target="_blank">Formulário</a></td>
 </tr>
@@ -196,6 +196,7 @@
 
 </body>
 </html>
+
 
 
 
