--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <td>2025.2 - Noturno</td>
     <td> Matriz 2017 (11081 - Coordenação Pedagógica)-  </td>
     <td> Matriz 2017 (11081 - Coordenação Pedagógica)-  </td>
-    <td> Profa. Waldete </td>
+    <td> Profa. Dra Waldete </td>
     <td><a href="https://forms.office.com/r/V19SccgpCa" target="_blank">Formulário</a></td>
 </tr>
 <tr>
@@ -196,6 +196,7 @@
 
 </body>
 </html>
+
 
 
 
