--- a/siteestagio.html
+++ b/siteestagio.html
@@ -79,6 +79,13 @@
 <body>
 
     <h1>Formulário: Entrega de documentação de estágio curricular- 2025.2 (Links dos Professores/Secretarias)</h1>
+    <div class="revisao-container">
+        <h2>📌 Revisão de Notas</h2>
+        <p><strong>Alunos:</strong> Caso desejem solicitar revisão de notas, preencham o formulário abaixo:</p>
+        <p><a href="https://forms.office.com/r/0BxWd0uJYE" target="_blank">Formulário de Revisão para Alunos</a></p>
+        <p><strong>Secretaria e Professores:</strong> Utilizem o formulário interno a seguir para tratar de revisões:</p>
+        <p><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mdTl4moSM_FOpZv92esl_rlUM1VSOEYzR1NINFQxT0xLNUs3STNMUTJGUC4u&Token=35d80c1592504c0a869e795a263b930c" target="_blank">Formulário Interno para Secretaria e Professores</a></p>
+    </div>
 
     <div class="table-container">
         <table>
@@ -198,16 +205,10 @@
         </table>
     </div>
 
-    <div class="revisao-container">
-        <h2>📌 Revisão de Notas</h2>
-        <p><strong>Alunos:</strong> Caso desejem solicitar revisão de notas, preencham o formulário abaixo:</p>
-        <p><a href="https://forms.office.com/r/zBXFNEtp6w" target="_blank">Formulário de Revisão para Alunos</a></p>
-        <p><strong>Secretaria e Professores:</strong> Utilizem o formulário interno a seguir para tratar de revisões:</p>
-        <p><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UMEtUQU9OSjlPQVJLWDI3U0FIUlQ2WDZZUS4u&Token=39d6dbba9068487aa99f2ab405aada7d" target="_blank">Formulário Interno para Secretaria e Professores</a></p>
-    </div>
 
 </body>
 </html>
+
 
 
 
