--- a/siteestagio.html
+++ b/siteestagio.html
@@ -127,7 +127,7 @@
                   <tr>
                     <td>2026.1 - matutino</td>
                     <td> Práticas para Alfabetização </td>
-                    <td>Práticas Matutino/td>
+                    <td>Práticas Matutino</td>
                     <td>Ma. Ivaneide Dantas da Silva </td>
                     <td><a href="https://forms.office.com/r/6AEjNEBV6z" target="_blank">Formulário</a></td>
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UODFZOTdUSFRXWFlTVFRDQTdTVVFMVTdQNC4u&Token=c9a5d5ac6751422797d5baccfe8afc47" target="_blank">Acesso Interno</a></td>
@@ -135,19 +135,12 @@
                  <tr>
                     <td>2026.1 - matutino</td>
                     <td> Práticas e Perspectivas para a Educação Inclusiva </td>
-                    <td>Práticas Inclusiva/td>
-                    <td>Dra. Alcione Piva e Profa. Ma. Sofia Alencastro </td>
-                    <td><a href="https://forms.office.com/r/M2x6MJNyC6" target="_blank">Formulário</a></td>
-                    <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UN0FYTlNTQkVRTkRXWUtUWkJVUFNaWFpaVi4u&Token=7d9aa7adf1bc438f88da47fd923f85ef" target="_blank">Acesso Interno</a></td>
-                </tr>
-               <tr>
-                    <td>2026.1 - matutino</td>
-                    <td> Práticas e Perspectivas para a Educação Inclusiva </td>
                     <td>Práticas Inclusiva</td>
                     <td>Dra. Alcione Piva e Profa. Ma. Sofia Alencastro </td>
                     <td><a href="https://forms.office.com/r/M2x6MJNyC6" target="_blank">Formulário</a></td>
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UN0FYTlNTQkVRTkRXWUtUWkJVUFNaWFpaVi4u&Token=7d9aa7adf1bc438f88da47fd923f85ef" target="_blank">Acesso Interno</a></td>
                 </tr>
+               
                 <tr>
                     <td>2026.1 - matutino</td>
                     <td> Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
@@ -196,14 +189,7 @@
                     <td><a href="https://forms.office.com/r/FTtvbD6kiF" target="_blank">Formulário</a></td>
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UM1IxTEs2TzlUV0xQTTkzNkRYSjc1VEc1NC4u&Token=4e4a8e90c6884179b36ba9046a8c05d7" target="_blank">Acesso Interno</a></td>
                 </tr>
-               <tr>
-                    <td>2026.1 - Noturno</td>
-                    <td> Práticas e Perspectivas para a Educação Inclusiva </td>
-                    <td>Práticas Inclusiva Noturno</td>
-                    <td>Drª Elizabeth Sanada </td>
-                    <td><a href="https://forms.office.com/r/FTtvbD6kiF" target="_blank">Formulário</a></td>
-                    <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UM1IxTEs2TzlUV0xQTTkzNkRYSjc1VEc1NC4u&Token=4e4a8e90c6884179b36ba9046a8c05d7" target="_blank">Acesso Interno</a></td>
-                </tr>
+               
                 <tr>
                     <td>2026.1 - Noturno</td>
                     <td> Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
@@ -226,6 +212,7 @@
 
 </body>
 </html>
+
 
 
 
