--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
 
     <div class="content">
       <h1>
-        Aguarde o período de revisão de notas! <span class="sparkle">✨</span>
+        Olá <span class="sparkle">✨</span>
       </h1>
 
       <p class="sub">
-        Caso precise de algo, escreva para <strong>Ivaneide</strong> 💬
+        Caso precise de algo, escreva para <strong>a professora da disciplina</strong> 💬
       </p>
 
       <div class="badge">
@@ -151,3 +151,4 @@
   </div>
 </body>
 </html>
+
