--- a/siteestagio.html
+++ b/siteestagio.html
@@ -119,7 +119,7 @@
                 <tr>
                     <td>2026.1 - matutino</td>
                     <td> Educação de Jovens e Adultos </td>
-                    <td>EJA MAatutino/td>
+                    <td>EJA MAatutino</td>
                     <td>Ma. Sheila Coelho </td>
                     <td><a href="https://forms.office.com/r/7bhx5hdUHy" target="_blank">Formulário</a></td>
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5UNFNGS0s1UEVQTjRUTUJQRk03SjZKWEJWVi4u&Token=539b093eaec346828877c24ffc480d6d" target="_blank">Acesso Interno</a></td>
@@ -144,7 +144,7 @@
                 <tr>
                     <td>2026.1 - matutino</td>
                     <td> Oficio de Professor e Desenvolvimento Profissional - TCC III </td>
-                    <td>Oficio Matutino/td>
+                    <td>Oficio Matutino</td>
                     <td>Dra. Alcione Piva </td>
                     <td><a href="https://forms.office.com/r/PerscuyRDm" target="_blank">Formulário</a></td>
                     <td><a href="https://forms.office.com/Pages/DesignPageV2.aspx?subpage=design&FormId=0CttMUH8HkaTcUQaaIj3mW2Phy292NNHtILZbizO0k5URUgyWllESEtBMjhDQ1pVNU9TTFQ1OVVUNC4u&Token=3b7852a65897484d82317db9bb8baf1f" target="_blank">Acesso Interno</a></td>
@@ -212,6 +212,7 @@
 
 </body>
 </html>
+
 
 
 
