--- a/visaoaluno20252.html
+++ b/visaoaluno20252.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Disciplinas 2025.1 - Alunos</title>
+  <title>Disciplinas 2025.1 -</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -74,7 +74,7 @@
           <th>Disciplina</th>
           <th>Nome da Disciplina</th>
           <th>Professora</th>
-          <th>Link dos Alunos</th>
+          <th>Link do Formulário</th>
         </tr>
       </thead>
       <tbody>
@@ -196,6 +196,7 @@
 
 </body>
 </html>
+
 
 
 
